# learn_langchain

./: .gitignore  first_test.py  langgraph.json  ollama_test.py  pyproject.toml  recipe.py  short_memory_test.py  tools_test.py
app/: main.py
app/agents/: personal_recipe.py
app/api/: chat.py  oss.py
app/common/: logger.py
app/models/: schemas.py
app/static/: app.js  index.html  style.css
db/: recipe.db-shm  recipe.db-wal
