[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.3.1",
    "fastapi>=0.138.0",
    "langchain>=1.0",
    "langchain-anthropic>=0.3.22",
    "langchain-core>=1.4.7",
    "langchain-deepseek>=0.1.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
